[gd_scene load_steps=13 format=3 uid="uid://iyjqdllr06is"]

[ext_resource type="Script" path="res://Scripts/Pickups/health_orb.gd" id="1_2sq2i"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_npio4"]
transparency = 1
albedo_color = Color(0.0588235, 0.870588, 1, 0.745098)
emission_enabled = true
emission = Color(0.0588235, 0.870588, 1, 1)
emission_energy_multiplier = 0.75

[sub_resource type="SphereMesh" id="SphereMesh_gil3g"]
material = SubResource("StandardMaterial3D_npio4")
radius = 0.25
height = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ug37c"]
albedo_color = Color(0.0588235, 0.870588, 1, 1)
emission_enabled = true
emission = Color(0.0588235, 0.870588, 1, 1)
emission_energy_multiplier = 0.75

[sub_resource type="SphereMesh" id="SphereMesh_3bt3g"]
material = SubResource("StandardMaterial3D_ug37c")
radius = 0.18
height = 0.36

[sub_resource type="CylinderShape3D" id="CylinderShape3D_l5mga"]
height = 1.25
radius = 0.25

[sub_resource type="SphereShape3D" id="SphereShape3D_enxwh"]
radius = 0.25

[sub_resource type="Animation" id="Animation_s3o38"]
resource_name = "FastFlash"
length = 4.0
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mesh:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.2, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PickupArea/CollisionSphere:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.2, 0), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Mesh:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2, 2.25, 2.5, 2.75, 3, 3.25, 3.5, 3.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false]
}

[sub_resource type="Animation" id="Animation_h52fk"]
resource_name = "Idle"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mesh:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.2, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PickupArea/CollisionSphere:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.2, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_rh8hq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mesh:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PickupArea/CollisionSphere:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Mesh:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_g6bqh"]
resource_name = "SlowFlash"
length = 4.0
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mesh:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.2, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PickupArea/CollisionSphere:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.2, 0), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Mesh:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 0.75, 1.5, 1.75, 2.5, 2.75, 3.5, 3.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jikop"]
_data = {
"FastFlash": SubResource("Animation_s3o38"),
"Idle": SubResource("Animation_h52fk"),
"RESET": SubResource("Animation_rh8hq"),
"SlowFlash": SubResource("Animation_g6bqh")
}

[node name="HealthOrb" type="CharacterBody3D" node_paths=PackedStringArray("anim_player", "fast_flash_timer", "deletion_timer")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 0
script = ExtResource("1_2sq2i")
anim_player = NodePath("AnimationPlayer")
fast_flash_timer = NodePath("FastFlashTimer")
deletion_timer = NodePath("DeletionTimer")

[node name="Mesh" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_gil3g")

[node name="InnerOrb" type="MeshInstance3D" parent="Mesh"]
mesh = SubResource("SphereMesh_3bt3g")
skeleton = NodePath("../..")

[node name="HoverCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.375, 0)
shape = SubResource("CylinderShape3D_l5mga")

[node name="PickupArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionSphere" type="CollisionShape3D" parent="PickupArea"]
shape = SubResource("SphereShape3D_enxwh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jikop")
}

[node name="SlowFlashTimer" type="Timer" parent="."]
wait_time = 12.0
one_shot = true
autostart = true

[node name="FastFlashTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="DeletionTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="body_entered" from="PickupArea" to="." method="_on_pickup_area_body_entered"]
[connection signal="timeout" from="SlowFlashTimer" to="." method="_on_slow_flash_timer_timeout"]
[connection signal="timeout" from="FastFlashTimer" to="." method="_on_fast_flash_timer_timeout"]
[connection signal="timeout" from="DeletionTimer" to="." method="_on_lifetime_timer_timeout"]
